--- a/personajes.html
+++ b/personajes.html
@@ -30,7 +30,7 @@
         }
         .search {
             background-color: transparent;
-            border: 5px solid var(--color-quinto)
+            border: 5px solid var(--color-quinto);
             border-radius: 50px;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             font-size: 15px;
